--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --history-api-fallback --inline --progress",
-    "test": "node_modules/mocha/bin/mocha --require babel-core/register src/tests"
+    "test": "node_modules/mocha/bin/mocha --require babel-core/register src/tests",
+    "build": "babel src/ -d lib/",
+    "prepublish": "yarn run build"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.71.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
     "mocha-loader": "^1.1.3",
