--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "webpack-node-externals": "^1.7.2",
     "webpack-shell-plugin": "^0.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.1.1"
+  }
 }
