--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "dotenv": "^5.0.1",
     "flow-bin": "^0.71.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
@@ -29,6 +30,7 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "cors": "^2.8.4"
   }
 }
